--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "gl": "^4.4.0",
     "gl-mat4": "^1.1.4",
     "glsl-atmosphere": "^2.0.0",
+    "glsl-dither": "^1.0.1",
     "glsl-fractal-brownian-noise": "^1.1.0",
     "glsl-luma": "^1.0.1",
     "glsl-noise": "0.0.0",
